--- a/2Task1.ipynb
+++ b/2Task1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 149,
    "id": "fb2f841f-6932-40fa-882b-ea12a9011fa8",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 151,
    "id": "bfb15316-59ea-4b04-8419-496cf60a3d92",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 152,
    "id": "3e49d219-b658-4bcd-a442-8dbae02474c5",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 153,
    "id": "56ec5897-7238-4555-83ae-671177e500cc",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 154,
    "id": "5b93f664-7e77-42c8-aed4-dd4380ad2c30",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 155,
    "id": "a7bf2d9c-92b0-4213-8af5-4f850ced9a9f",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 156,
    "id": "34003098-92c7-4564-83f8-995a00e71927",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 157,
    "id": "61b523e6-df24-4565-8d87-eeafa45459f8",
    "metadata": {},
    "outputs": [],
@@ -6440,6 +6440,154 @@
     "plt.title(\"Impact of Batch Size on Model Training\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "e7283b02-f6b3-4192-8a87-af1f5e10d529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9969 - acc: 0.5979 - val_loss: 1.0955 - val_acc: 0.5779\n",
+      "Epoch 2/50\n",
+      "1309/1309 [==============================] - 3s 3ms/step - loss: 0.9888 - acc: 0.6035 - val_loss: 1.0977 - val_acc: 0.5779\n",
+      "Epoch 3/50\n",
+      "1309/1309 [==============================] - 3s 3ms/step - loss: 0.9883 - acc: 0.6035 - val_loss: 1.0955 - val_acc: 0.5779\n",
+      "Epoch 4/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9891 - acc: 0.6035 - val_loss: 1.0953 - val_acc: 0.5779\n",
+      "Epoch 5/50\n",
+      "1309/1309 [==============================] - 5s 4ms/step - loss: 0.9884 - acc: 0.6035 - val_loss: 1.0988 - val_acc: 0.5779\n",
+      "Epoch 6/50\n",
+      "1309/1309 [==============================] - 5s 4ms/step - loss: 0.9883 - acc: 0.6035 - val_loss: 1.0914 - val_acc: 0.5779\n",
+      "Epoch 7/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9883 - acc: 0.6035 - val_loss: 1.1129 - val_acc: 0.5779\n",
+      "Epoch 8/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9877 - acc: 0.6035 - val_loss: 1.0885 - val_acc: 0.5779\n",
+      "Epoch 9/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9880 - acc: 0.6035 - val_loss: 1.0917 - val_acc: 0.5779\n",
+      "Epoch 10/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9875 - acc: 0.6035 - val_loss: 1.0980 - val_acc: 0.5779\n",
+      "Epoch 11/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9877 - acc: 0.6035 - val_loss: 1.0976 - val_acc: 0.5779\n",
+      "Epoch 12/50\n",
+      "1309/1309 [==============================] - 4s 3ms/step - loss: 0.9871 - acc: 0.6035 - val_loss: 1.0977 - val_acc: 0.5779\n",
+      "Epoch 13/50\n",
+      "1309/1309 [==============================] - 4s 3ms/step - loss: 0.9874 - acc: 0.6035 - val_loss: 1.0855 - val_acc: 0.5779\n",
+      "Epoch 14/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9873 - acc: 0.6035 - val_loss: 1.0906 - val_acc: 0.5779\n",
+      "Epoch 15/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9872 - acc: 0.6035 - val_loss: 1.0961 - val_acc: 0.5779\n",
+      "Epoch 16/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9870 - acc: 0.6035 - val_loss: 1.0971 - val_acc: 0.5779\n",
+      "Epoch 17/50\n",
+      "1309/1309 [==============================] - 4s 3ms/step - loss: 0.9870 - acc: 0.6035 - val_loss: 1.0921 - val_acc: 0.5779\n",
+      "Epoch 18/50\n",
+      "1309/1309 [==============================] - 5s 4ms/step - loss: 0.9871 - acc: 0.6035 - val_loss: 1.0951 - val_acc: 0.5779\n",
+      "Epoch 19/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9870 - acc: 0.6035 - val_loss: 1.1007 - val_acc: 0.5779\n",
+      "Epoch 20/50\n",
+      "1309/1309 [==============================] - 2s 2ms/step - loss: 0.9870 - acc: 0.6035 - val_loss: 1.0952 - val_acc: 0.5779\n",
+      "Epoch 21/50\n",
+      "1309/1309 [==============================] - 2s 2ms/step - loss: 0.9869 - acc: 0.6035 - val_loss: 1.0876 - val_acc: 0.5779\n",
+      "Epoch 22/50\n",
+      "1309/1309 [==============================] - 2s 2ms/step - loss: 0.9867 - acc: 0.6035 - val_loss: 1.1026 - val_acc: 0.5779\n",
+      "Epoch 23/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9870 - acc: 0.6035 - val_loss: 1.0994 - val_acc: 0.5779\n",
+      "Epoch 24/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9867 - acc: 0.6035 - val_loss: 1.0926 - val_acc: 0.5779\n",
+      "Epoch 25/50\n",
+      "1309/1309 [==============================] - 4s 3ms/step - loss: 0.9867 - acc: 0.6035 - val_loss: 1.0914 - val_acc: 0.5779\n",
+      "Epoch 26/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9868 - acc: 0.6035 - val_loss: 1.1010 - val_acc: 0.5779\n",
+      "Epoch 27/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9867 - acc: 0.6035 - val_loss: 1.0975 - val_acc: 0.5779\n",
+      "Epoch 28/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9869 - acc: 0.6035 - val_loss: 1.0973 - val_acc: 0.5779\n",
+      "Epoch 29/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9868 - acc: 0.6035 - val_loss: 1.0925 - val_acc: 0.5779\n",
+      "Epoch 30/50\n",
+      "1309/1309 [==============================] - 5s 4ms/step - loss: 0.9866 - acc: 0.6035 - val_loss: 1.0954 - val_acc: 0.5779\n",
+      "Epoch 31/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9868 - acc: 0.6035 - val_loss: 1.0986 - val_acc: 0.5779\n",
+      "Epoch 32/50\n",
+      "1309/1309 [==============================] - 5s 4ms/step - loss: 0.9866 - acc: 0.6035 - val_loss: 1.0971 - val_acc: 0.5779\n",
+      "Epoch 33/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9867 - acc: 0.6035 - val_loss: 1.0933 - val_acc: 0.5779\n",
+      "Epoch 34/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9866 - acc: 0.6035 - val_loss: 1.0975 - val_acc: 0.5779\n",
+      "Epoch 35/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9867 - acc: 0.6035 - val_loss: 1.0948 - val_acc: 0.5779\n",
+      "Epoch 36/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9865 - acc: 0.6035 - val_loss: 1.0943 - val_acc: 0.5779\n",
+      "Epoch 37/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9866 - acc: 0.6035 - val_loss: 1.0959 - val_acc: 0.5779\n",
+      "Epoch 38/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9866 - acc: 0.6035 - val_loss: 1.0936 - val_acc: 0.5779\n",
+      "Epoch 39/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9865 - acc: 0.6035 - val_loss: 1.0947 - val_acc: 0.5779\n",
+      "Epoch 40/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9866 - acc: 0.6035 - val_loss: 1.0981 - val_acc: 0.5779\n",
+      "Epoch 41/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9866 - acc: 0.6035 - val_loss: 1.0958 - val_acc: 0.5779\n",
+      "Epoch 42/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9865 - acc: 0.6035 - val_loss: 1.1007 - val_acc: 0.5779\n",
+      "Epoch 43/50\n",
+      "1309/1309 [==============================] - 4s 3ms/step - loss: 0.9866 - acc: 0.6035 - val_loss: 1.0923 - val_acc: 0.5779\n",
+      "Epoch 44/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9864 - acc: 0.6035 - val_loss: 1.0967 - val_acc: 0.5779\n",
+      "Epoch 45/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9865 - acc: 0.6035 - val_loss: 1.0949 - val_acc: 0.5779\n",
+      "Epoch 46/50\n",
+      "1309/1309 [==============================] - 4s 3ms/step - loss: 0.9864 - acc: 0.6035 - val_loss: 1.1001 - val_acc: 0.5779\n",
+      "Epoch 47/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9865 - acc: 0.6035 - val_loss: 1.0963 - val_acc: 0.5779\n",
+      "Epoch 48/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9864 - acc: 0.6035 - val_loss: 1.1027 - val_acc: 0.5779\n",
+      "Epoch 49/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9864 - acc: 0.6035 - val_loss: 1.0978 - val_acc: 0.5779\n",
+      "Epoch 50/50\n",
+      "1309/1309 [==============================] - 3s 2ms/step - loss: 0.9864 - acc: 0.6035 - val_loss: 1.1011 - val_acc: 0.5779\n",
+      "Time taken to train 159.7476773262024 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Task 3c - Measures training time of training neural network model\n",
+    "# Task 1a - Train Neural Network\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "model = models.Sequential([\n",
+    "    layers.Dense(32, activation='sigmoid', input_shape=(6,)),\n",
+    "    layers.Dense(64, activation='sigmoid'),\n",
+    "    layers.Dense(4, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "# Converts labels to be one hot\n",
+    "y_tr_hot = np.array([np.array([1 if i == y else 0 for i in range(4)]) for y in y_tr])\n",
+    "y_test_hot = np.array([np.array([1 if i == y else 0 for i in range(4)]) for y in y_test])\n",
+    "\n",
+    "epochs = 50\n",
+    "val_split=0.1\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', \n",
+    "              loss='categorical_crossentropy', metrics=['acc'])\n",
+    "\n",
+    "# Train the model\n",
+    "# Note training appears to be very temperemental. Around 2/3 runs will find nothing,\n",
+    "# but it will learn effectively for the other 1/3 of runs.\n",
+    "history = model.fit(X_tr, y_tr_hot, epochs=epochs, validation_split=val_split)\n",
+    "\n",
+    "print(\"Time taken to train\", time.time() - start_time, \"seconds\")"
    ]
   }
  ],
